--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "yarust"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["segfo <k.segfo@gmail.com>"]
 build = "build.rs"
 
 [dependencies]
 libc = "0.2"
+wincolor = "0.1"
+clap = "2.31"
